optimized HTML/CSS layout

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,145 +1,164 @@
 * {
-    margin: 0;
-    padding: 0;
-  } 
- .container{
-    background-color:rgba(29,29,32) ;
-    height: 1200px;
-  }
-  
-  /* HEADER START */
-  header {
-      background-color: rgba(29,29,32);
-    }
-    
-  header h1 {
-      padding-top: 80px ;
-      padding-bottom: 20px;
-      text-align: center;
-      font-size: 70px;
-      color: white ;
-      font-family: Bayon;
-     }
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
- .text-active{
-        color: green;
-     }
+.container {
+  background-color: rgba(29, 29, 32);
+  height: 1200px;
+}
 
-  header h4 {
-        font-size: 30px;
-        text-align: center;
-        color: green ;
-      }
+/* HEADER START */
+header {
+  background-color: rgba(29, 29, 32);
+}
+
+header h1 {
+  padding-top: 80px;
+  padding-bottom: 20px;
+  text-align: center;
+  font-size: 70px;
+  color: white;
+  font-family: sans-serif;
+}
+
+.text-active {
+  color: green;
+}
+
+header h4 {
+  font-size: 30px;
+  text-align: center;
+  color: green;
+  font-family: sans-serif;
+
+}
+
 /* HEADER END */
 
 
 
- /* SEARCH CITY SECTION STARTS*/
-.searchCity{
-    text-align: center;
-    color: white;
-  }
+/* SEARCH CITY SECTION STARTS*/
+.searchCity {
+  text-align: center;
+  color: white;
+}
 
 .searchCity input {
-    width: 40%;
-    border: none;
-    background: white;
-    color: rgba(29,29,32);
-    text-align: left;
-    padding: 15px 0;
-    font-size: 16px;
-    font-family: sans-serif;
-    font-weight: bold;
-    border-radius: 10px;
-    margin-top: 100px;
-  }
-  /* SEARCH CITY SECTION ENDS*/
-
-
-
-
- /* SORT BY  SECTION STARTS*/
-.relevance{
-    text-align: center;
-    color: white;
+  width: 40%;
+  border: none;
+  background: white;
+  color: rgba(29, 29, 32);
+  text-align: center;
+  padding: 15px 0;
+  font-size: 16px;
+  font-family: sans-serif;
+  font-weight: bold;
+  border-radius: 10px;
+  margin-top: 30px;
+  margin-bottom: 50px;
 }
-.relevance select{
-    width: 15%;
-    border: none;
-    background: white;
-    color: rgba(29,29,32);
-    text-align: left ;
-    padding: 14px 0;
-    font-size: 16px;
-    font-family: sans-serif;
-    font-weight: bold;
-    border-radius: 10px;
-    margin-top: 100px;  
+
+/* SEARCH CITY SECTION ENDS*/
+
+
+
+
+/* SORT BY  SECTION STARTS*/
+.relevance {
+  text-align: center;
+  color: white;
 }
- 
+
+.relevance label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  font-family: sans-serif;
+}
+
+.relevance select {
+  width: 15%;
+  border: none;
+  background: white;
+  color: rgba(29, 29, 32);
+  text-align: center;
+  padding: 14px 0;
+  font-size: 16px;
+  font-family: sans-serif;
+  font-weight: bold;
+  border-radius: 10px;
+  margin-top: 10px;
+}
+
 /* SORT BY SECTION ENDS*/
 
 
 
 /*BEDS QUANTITY SECTION STARTS*/
-.minBeds{
-    text-align: center;
-    color: white; 
+.minBeds {
+  text-align: center;
+  color: white;
 }
+
+.minBeds label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  font-family: sans-serif;
+
+}
+
 
 
 .minBeds input {
-    width: 15%;
-    border: none;
-    background: white;
-    color: rgba(29,29,32);
-    text-align: left;
-    padding: 14px 0;
-    font-size: 16px;
-    font-family: sans-serif;
-    font-weight: bold;
-    border-radius: 10px;
-    margin-top: 100px;
+  width: 15%;
+  border: none;
+  background: white;
+  color: rgba(29, 29, 32);
+  text-align: center;
+  padding: 14px 0;
+  font-size: 16px;
+  font-family: sans-serif;
+  font-weight: bold;
+  border-radius: 10px;
+  margin-top: 10px;
+}
+
+button {
+  background-color: green;
+  color: white;
+  font-size: 16px;
+  font-family: sans-serif;
+  font-weight: bold;
+  border: none;
+  padding: 15px;
+  border-radius: 10px;
+  margin-top: 30px;
+  width: 50%;
 }
 
 
- button {
-    text-align: center;
-    color: white;
-
+button:hover {
+  color: white;
+  background: rgb(93, 113, 93);
 }
 
-.minBeds button {
-    width: 40%;
-    border: none;
-    background: green ;
-    color: rgba(29,29,32);
-    text-align: center;
-    padding: 15px 0;
-    font-size: 16px;
-    font-family: sans-serif;
-    font-weight: bold;
-    border-radius: 10px;
-    margin-left: 120px;
-  }
-
-.minBeds button:hover {
-    color:white;
-    background: rgb(93, 113, 93) ;
-}
 /*BEDS QUANTITY SECTION ENDS*/
 
 
 
 /*MADE BY SECTION STARTS*/
-.Team{
-    font-size: 12px;
-    font-family: sans-serif;
-    font-weight: bold;
-    color: white; 
-    text-align: center;
-    padding-top: 70px;
+.Team {
+  font-size: 12px;
+  font-family: sans-serif;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+  padding-top: 70px;
 }
+
 /*MADE BY SECTION ENDS*/
-
-
