added state selector

--- a/assets/style.css
+++ b/assets/style.css
@@ -62,7 +62,16 @@ header h4 {
 
 /* SEARCH CITY SECTION ENDS*/
 
+.stateSelect {
+display: flex;
+justify-content: center;
+color: white;
+font-family: sans-serif;
+}
 
+.stateSelect select {
+  margin-left: 10px;
+}
 
 
 /* SORT BY  SECTION STARTS*/
