updated HTML/CSS with dummy card

--- a/assets/style.css
+++ b/assets/style.css
@@ -158,6 +158,11 @@ button:hover {
 
 /*BEDS QUANTITY SECTION ENDS*/
 
+/* CARDS SECTION START */
+.card {
+  color: white;
+}
+
 
 
 /*MADE BY SECTION STARTS*/
